# dimple-trade-jni

./: .editorconfig  .gitignore  README.md  pom.xml
.github/workflows/: windows-package.yml
scripts/: build-windows-package.ps1
src/main/cpp/: CMakeLists.txt  KSDQuotApi.h  MakeCMD.txt  dimple_jni_trade.cpp  dimple_jni_trade.h
src/main/cpp-linux/: KSDTradeApi.h  KSDUserApiDataType.h  KSDUserApiStruct.h  build.sh  dimple_jni_trade.cpp  dimple_jni_trade.h
src/main/java/com/dimple/trade/: KsdTradeApi.java
src/main/java/com/dimple/trade/struct/: KsdNtyTraderMatch.java  KsdReqEncTradeLogin.java  KsdReqOrderAllQry.java  KsdReqTradeLogin.java  KsdReqTraderInsertOrders.java  KsdReqTraderQryMoney.java  KsdReqTraderQryPosi.java  KsdReqTraderQuitOrder.java  KsdRspInfo.java  KsdRspOrderAllQry.java  KsdRspTradeLogin.java  KsdRspTradeLogout.java  KsdRspTraderInsertOrders.java  KsdRspTraderQryMoney.java  KsdRspTraderQryPosi.java  KsdRspTraderQuitOrder.java  KsdRtnTraderInsertOrders.java
src/main/resources/win-x64/: KSDTradeApi.lib
src/test/java/com/dimple/trade/: KsdTradeApiWindowsResourceTest.java
